@@ -10,7 +10,8 @@
 	<integer>5</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>106</integer>
+		<integer>29</integer>
+		<integer>531</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>9B18</string>
